Cinnamon: Fix extra margin in popups and menus, fixes #186

--- a/cinnamon/_common.scss
+++ b/cinnamon/_common.scss
@@ -272,7 +272,6 @@ StScrollBar {
 %menu {
   color: $fg_color;
   background-color: $panel_bg;
-  margin-bottom: 7px;
   border: 1px solid $borders_color;
   border-radius: 5px;
 
